# libheif

./: .gitignore  README.md
libheif/: CMakeLists.txt  HEIFConverter.cc  HEIFConverter.h
